--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     <title>Hello!</title>
 </head>
 <body>
-    <h1>This is my web pahe</h1>
+    <h1 style="color:blue;">This is my web pahe</h1>
     <h2>Hello</h2>
     Hello, world!
 </body>
